<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000" >
    
    <Spinner
        android:id="@+id/levelselection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:prompt="@string/levelselection"
         />
    
    <Spinner 
        android:id="@+id/saveoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:prompt="@string/saveoptions" />
    
    <TextView 
        android:id="@+id/leveltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/leveltext"
        android:textStyle="bold"
        android:textColor="#11F22E"
        android:textSize="20sp" />
    
    <chris.ben.tableclicker.TFGameView 
        android:id="@+id/gamescreen"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/levelselection"
         />

</RelativeLayout>
